--- a/_config.yaml
+++ b/_config.yaml
@@ -1,6 +1,17 @@
-remote_theme: pages-themes/architect@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+#remote_theme: pages-themes/architect@v0.2.0
+#plugins:
+#- jekyll-remote-theme # add this line to the plugins list if you already have one
 
-title: [The title of your site]
-description: [A short description of your site's purpose]
+#title: [The title of your site]
+#description: [A short description of your site's purpose]
+
+
+theme: jekyll-theme-architect
+
+title: My GitHub Blog
+description: "A simple blog powered by GitHub Pages and Jekyll"
+
+# Add navigation links
+header_pages:
+  - index.md
+  - who.md
